2003-10-19  Robert Varga <frozenfingers@xs4all.nl>

	* Makefile.am
	
	Object declarations and signals in documentation
	
	* conglomerate-docs.sgml
	
	Object tree in documentation
	
	* README
	
	Added information about changing conglomerate-docs.sgml
	
2003-10-15  Robert Varga <frozenfingers@xs4all.nl>

	* Makefile.am
	Maintenance free GTKDOC_LIBS that works with make distcheck

2003-10-11  Robert Varga <frozenfingers@xs4all.nl>

	* Makefile.am
	Maintiance free definition of GTKDOC_LIBS

2003-10-08  David Malcolm <david@davemalcolm.demon.co.uk>

	* Makefile.am

	Make object paths in GTKDOC_LIBS relative to current build location in another attempt to try to get make distcheck to work

	* Makefile.am

	Explicitly list all object files in GTKDOC_LIBS (was failing a make distcheck)

2003-10-07  David Malcolm <david@davemalcolm.demon.co.uk>

	* conglomerate-docs.sgml

	Added a hand-written version containing overviews of how the major parts of the program work

2003-10-06  David Malcolm <david@davemalcolm.demon.co.uk>

	* Makefile.am

	Added $(GTKSOURCEVIEW_LIBS) and $(PRINTING_LIBS) to GTKDOC_LIBS

2003-10-06  Robert Varga

	* Makefile.am
	Generate conglomerate-docs.sgml,
	cleaner definition of source files
	and a hack that generates conglomerate.types

	* conglomerate.types.bkp is dropped

2003-10-02  Geert Stappers <stappers@stappers.nl>

	* README
	new file

2003-09-26  David Malcolm <david@davemalcolm.demon.co.uk>

	* conglomerate-docs.sgml

	Fixed typo in title
	
	* Makefile.am, conglomerate-docs.sgml, conglomerate.types.bkp, version.xml.in

	Created the reference directory and added these files (from a patch by Varga Robert for bug #122900)
	