@@ -1,3 +1,13 @@
+2003-10-23  Robert Varga <frozenfingers@xs4all.nl>
+
+	* mktypes, mkoverrides, fixsections:
+	
+	Used to generate some input files for gtk-doc, in doc/reference
+	
+	* checkincludes:
+	
+	Checks if all the header files in src have corresponding includes in doc/reference/conglomerate-docs.sgml
+
 2003-9-24  Geert Stappers <stappers@stappers.nl>
 
 	* ChangeLog, README, genreadme & mkcvstarball:
